# run

./: Cargo.toml  LICENSE  README.md  flake.nix
.cargo/: config.toml
.github/workflows/: build_nix.yml
src/: main.rs
